syntax = "proto3";

package modules;

option go_package = "./internal/grpc/modules;modules";

service ModulesService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Setup(SetupRequest) returns (SetupResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string status = 1;
}

message RegisterRequest {
  string name = 1;
  string ip = 3;
  int32 port = 4;
}

message RegisterResponse {
  bool success = 1;
  string module_id = 2;
  string message = 3;
}

message SetupRequest {
  string info = 1;
  bytes image = 2;
}

message SetupResponse {
  bool success = 1;
  string message = 2;
}

message DeleteRequest {
  string user_id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
